# longflash

./: README.md  pyproject.toml  requirements.txt
benchmarks/swebench/: manifest.json
benchmarks/terminal/: manifest.json
patches/vllm/: README.md  longflash-vllm-8decbfa02.patch
scripts/: build_static_yarn_scan_dataset.py  run_eagle3_transformers.py  run_qwen3_8b_static_yarn_scan.sh  run_qwen3_eagle3_target_yarn_buckets.sh  run_qwen3_transformers_dynamic_yarn_suffix_buckets.sh  run_transformers_buckets.sh  run_transformers_single.sh  summarize_dataset_runs.py  summarize_static_yarn_scan.py
scripts/benchmark/: run_agentic_memory_benchmark.py  run_benchmark_vllm_manual.sh  run_qwen_swebench_verified.py  run_qwen_vllm_by_variant_bucket_matrix.sh  server_utils.py  summarize_mswea_request_metrics.py
scripts/serve/: start_vllm_dflash_benchmark.sh  start_vllm_qwen35_target_benchmark.sh
src/dflash/: __init__.py  benchmark.py  benchmark_common.py  model.py  suffix_decoding.py
tests/: test_agentic_memory_benchmark_summary.py  test_benchmark_stats.py  test_suffix_decoding.py  test_vllm_dflash_batch_packing.py
